Стилі мобільноі  версіі

--- a/src/partials/program-section.html
+++ b/src/partials/program-section.html
@@ -1,18 +1,20 @@
 <section class="section program-section">
     <div class="container">
         <h2 class="title">Наша программа</h2>
-    <div>
+    
         <ul class="list program-list">
             <li class="program-list-item">
                 <h3 class="program-list-semester">1 семестр</h3>
                 <ul class="list method-list">
-                    <li class="method-list-item">— Grammar
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Grammar</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Nouns & Articles</li>
                             <li class="topic-list-item"> Adjectives & Adverb </li>
                         </ul>
                     </li>
-                    <li class="method-list-item">— Vocabulary
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Vocabulary</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Family & Relations</li>
                             <li class="topic-list-item">People & Society </li>
@@ -23,14 +25,16 @@
             <li class="program-list-item">
                 <h3 class="program-list-semester">2 семестр</h3>
                 <ul class="list method-list">
-                    <li class="method-list-item">— Grammar
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Grammar</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Pronouns</li>
                             <li class="topic-list-item">Active Voice</li>
                             <li class="topic-list-item">Passive Voice</li>
                         </ul class="list">
                     </li>
-                    <li class="method-list-item">— Vocabulary
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Vocabulary</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Home</li>
                             <li class="topic-list-item">School</li>
@@ -42,7 +46,8 @@
             <li class="program-list-item">
                 <h3 class="program-list-semester">3 семестр</h3>
                 <ul class="list method-list">
-                    <li class="method-list-item">— Grammar
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Grammar</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Modal verbs</li>
                             <li class="topic-list-item">Infinitive</li>
@@ -50,14 +55,16 @@
                             <li class="topic-list-item">Participle: 1, 2</li>
                         </ul>
                     </li>
-                    <li class="method-list-item">— Vocabulary
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Vocabulary</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Travel & Tourism</li>
                             <li class="topic-list-item">Culture & Free Time</li>
                             <li class="topic-list-item">Sport </li>
                         </ul>
                     </li>
-                    <li class="method-list-item">— Writing
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Writing</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Informal Letter</li>
                         </ul>
@@ -67,7 +74,8 @@
             <li class="program-list-item">
                 <h3 class="program-list-semester">4 семестр</h3>
                 <ul class="list method-list">
-                    <li class="method-list-item">— Grammar
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Grammar</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Clauses: Conditional and Wishes</li>
                             <li class="topic-list-item">Direct / Reported speech</li>
@@ -76,23 +84,27 @@
                             <li class="topic-list-item">Numeral</li>
                         </ul>
                     </li>
-                    <li class="method-list-item">— Vocabulary
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Vocabulary</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Healthy Living</li>
                             <li class="topic-list-item">Nature & Environment</li>
                             <li class="topic-list-item">Money</li>
                         </ul>
                     </li>
-                    <li class="method-list-item">— Writing
+                    <li class="method-list-item">
+                        <p class="method-list-text">— Writing</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Formal Letter</li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li class="program-list-item">5 семестр
+            <li class="program-list-item">
+                <h3 class="program-list-semester">5 семестр</h3>
                 <ul class="list method-list">
-                    <li class="method-list-item">—
+                    <li class="method-list-item">
+                        <p class="method-list-text">—</p>
                         <ul class="list topic-list">
                             <li class="topic-list-item">Revision</li>
                             <li class="topic-list-item">Tests</li>
@@ -101,7 +113,7 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    
 
     <img>
 
@@ -112,28 +124,34 @@
 <!-- Секция почему нас выбирают -->
 <section class="section choose-section">
     <div class="container">
-        <h2 class="title">Почему нас выбирают</h2>
+        <div class="title-wrapper">
+            <h2 class="title">Почему нас выбирают</h2>
+        </div>
+        
 
-        <ul class="list choose-list">
-            <li class="choose-list-item">— 01
-                <p>Обучение в малых командах</p>
-            </li>
-            <li class="choose-list-item">— 02
-                <p class="choose-list-text">Визуализированные конспекты</p>
-            </li>
-            <li class="choose-list-item">— 03
-                <p class="choose-list-text">Каждое занятие имеет цель и конкретный результат</p>
-            </li>
-            <li class="choose-list-item">— 04
-                <p class="choose-list-text">Реальные результаты преподавателя</p>
-            </li>
-            <li class="choose-list-item">— 05
-                <p class="choose-list-text">Программа курса соответствует требованиям МОН Украины</p>
-            </li>
-            <li class="choose-list-item">— 06
-                <p class="choose-list-text">Набор команд по уровням знаний</p>
-            </li>
-        </ul>
+        <div class="choose-wrapper">
+            <ul class="list choose-list">
+                <li class="choose-list-item">— 01
+                    <p class="choose-list-text">Обучение в малых командах</p>
+                </li>
+                <li class="choose-list-item">— 02
+                    <p class="choose-list-text">Визуализированные конспекты</p>
+                </li>
+                <li class="choose-list-item">— 03
+                    <p class="choose-list-text">Каждое занятие имеет цель и конкретный результат</p>
+                </li>
+                <li class="choose-list-item">— 04
+                    <p class="choose-list-text">Реальные результаты преподавателя</p>
+                </li>
+                <li class="choose-list-item">— 05
+                    <p class="choose-list-text">Программа курса соответствует требованиям МОН Украины</p>
+                </li>
+                <li class="choose-list-item">— 06
+                    <p class="choose-list-text">Набор команд по уровням знаний</p>
+                </li>
+            </ul>
+        </div>
+        
     </div>
    
 </section>
