--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -1,7 +1,12 @@
+// *{
+//     outline: solid 1px red;
+// }
 .program-section{
     background-color: #111518;
     padding-top: 50px;
     padding-bottom: 537px;
+
+    position: relative;
 }
 
 .title{
@@ -9,17 +14,18 @@
     font-weight: 800;
     font-size: 20px;
     line-height: 130%;
-    text-align: center;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
 }
 
 .program-section .title{
     margin-bottom: 43px;
+    text-align: center;
 }
 
 .choose-section .title{
-    margin-bottom: 30px;
+    padding-bottom: 30px;
+    width: 180px;
 }
 
 .program-list-semester{
@@ -29,8 +35,134 @@
     line-height: 2;
     letter-spacing: 0.08em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
     
-    margin-bottom: 25px;
+    // margin-bottom: 5px;
+
+    position: relative;
 }
+
+.program-list-item:not(:last-child){
+   margin-bottom: 40px;
+}
+
+.method-list-text{
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 164.9%;
+    // align-items: center;
+    letter-spacing: 0.08em;
+    color: var(--accent-color); 
+
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+
+
+.topic-list-item{
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.67;
+    letter-spacing: 0.08em;
+    color: var(--secondary-text-color);
+    opacity: 0.5;
+
+    &:not(:last-child){
+        margin-bottom: 5px;
+    }
+
+}
+
+.program-list-item::before{
+    content: " ";
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background:  var(--accent-color);
+    position: absolute;
+    left: 82px;
+    margin-top: 8px;
+    
+}
+
+.program-list{
+    margin-left: 120px;
+}
+.program-list::before{
+    content: " ";
+    // display: inline-block;
+    height: 1507px;
+    width: 1px;
+    background:  #FFFFFF ;
+    position: absolute;
+    margin-right: 20px;
+
+    top: 130px;
+    left: 88px;
+}
+
+@media screen and (max-width: 767px){
+   
+    .program-section .container{
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    
+
+    .choose-section{
+        margin-top: 50px;
+       position: absolute;
+       top: 1760px;
+    
+    }
+
+    .choose-wrapper{
+        margin-right: auto;
+        margin-left: auto;
+        width: 280px;
+        padding: 20px 30px;
+        background: #FFFFFF;
+        box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+
+    }
+
+    .title-wrapper{
+        background-color:var(--title-text-color);
+    }
+
+}
+
+
+// ---------------- Секция почему нас выбирают-----------------
+.choose-list-item{
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.65;
+    align-items: center;
+    letter-spacing: 0.08em;
+    color: var(--accent-color); 
+
+    margin-bottom: 20px;
+    
+}
+
+.choose-list-text{
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.43;
+    align-items: center;
+    letter-spacing: 0.08em;
+    color: var(--title-text-color);
+
+    margin-top: 10px;
+    
+}
+
 
