--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 
 @import './layout/section';
 @import './layout/container';
+@import './layout/program-section';
 
 @import './components/body';
 
