--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -2,5 +2,6 @@
     margin: 0 auto;
 
     display: block;
-    align-items: center;
-    text-align: center;}
+    // align-items: center;
+    // text-align: center;
+}
