--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,48 +1,25 @@
-<div class="container">
-    <h1>Главные проблемы учеников на English ВНО, которые мы помогаем решить</h1>
-    <ol>
-        <li>
-            <p>Название грамматики</p>
+<div class="container problems">
+    <h1 class="problems-title">Главные проблемы учеников<br>на English ВНО, которые<br> мы <span class="problems-word">помогаем</span>  решить</h1>
+    <ul class="problems-list list">
+        <li class="problems-item">
+            <p class="problems-description">Название грамматики</p>
         </li>
-        <li>
-            <p>Неумение вомпринимать
+        <li class="problems-item">
+            <p class="problems-description">Неумение вомпринимать
             устную английскую речь</p>
         </li>
-        <li>
-            <p>Скупой словарный запас
+        <li class="problems-item">
+            <p class="problems-description">Скупой словарный запас
             для написани сочинения</p>
         </li>
-        <li>
-            <p>Подготовка в одиночку</p>
+        <li class="problems-item">
+            <p class="problems-description">Подготовка в<br> одиночку</p>
         </li>
-        <li>
-            <p>Отсутствие единого ресурса знаний</p>
+        <li class="problems-item">
+            <p class="problems-description">Отсутствие единого ресурса знаний</p>
         </li>
-        <li>
-            <p>Недостатой самоорганизации и лень</p>
+        <li class="problems-item">
+            <p class="problems-description">Недостатой самоорганизации и лень</p>
         </li>
-    </ol>
-</div>
-<div class="container">
-    <h1>Почему нас выбирают</h1>
-    <ol>
-        <li>
-            <p>Обучение в малых командах</p>
-        </li>
-        <li>
-            <p>Визуализированные конспекты</p>
-        </li>
-        <li>
-            <p>Каждое занятие имеет цель и конкретный результат</p>
-        </li>
-        <li>
-            <p>Ревльные результаты преподавателя</p>
-        </li>
-        <li>
-            <p>Прогамма курса соответствует требованиям МОН Украины</p>
-        </li>
-        <li>
-            <p>Набор команд по уровням знаний</p>
-        </li>
-    </ol>
+    </ul>
 </div>
