create logo style

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './layout/header';
 @import './example';
 @import './base/common';
 @import './utils/hidden-title';
