--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,23 +1,25 @@
-<div class="container">
-    <h1>Почему нас выбирают</h1>
-    <ol>
-        <li>
-            <p>Обучение в малых командах</p>
+<section class="section">
+<div class="container features">
+    <h1 class="features-title">Почему нас<br> выбирают</h1>
+    <ul class="features-list list">
+        <li class="features-item">
+            <p class="features-description">Обучение в малых командах</p>
         </li>
-        <li>
-            <p>Визуализированные конспекты</p>
+        <li class="features-item">
+            <p class="features-description">Визуализированные конспекты</p>
         </li>
-        <li>
-            <p>Каждое занятие имеет цель и конкретный результат</p>
+        <li class="features-item">
+            <p class="features-description">Каждое занятие имеет цель и конкретный результат</p>
         </li>
-        <li>
-            <p>Ревльные результаты преподавателя</p>
+        <li class="features-item">
+            <p class="features-description">Ревльные результаты преподавателя</p>
         </li>
-        <li>
-            <p>Прогамма курса соответствует требованиям МОН Украины</p>
+        <li class="features-item">
+            <p class="features-description">Прогамма курса соответствует требованиям МОН Украины</p>
         </li>
-        <li>
-            <p>Набор команд по уровням знаний</p>
+        <li class="features-item">
+            <p class="features-description">Набор команд по уровням знаний</p>
         </li>
-    </ol>
+    </ul>
 </div>
+</section>
