--- a/src/sass/components/problems.scss
+++ b/src/sass/components/problems.scss
@@ -14,6 +14,7 @@
   color: var(--accent-color);
 }
 .problems-list {
+  z-index: 3;
   position: absolute;
   margin: auto;
   max-width: 280px;
@@ -33,6 +34,7 @@
   @include font(700, 14px, 1.2);
   letter-spacing: 0.08em;
   color: #ff6b09;
+  margin: 0;
 }
 
 .problems-description {
@@ -42,4 +44,31 @@
   margin: 0;
   margin-top: 5px;
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .problems-title {
+    @include font(800, 26px, 1.3);
+  }
+  .problems-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    padding-bottom: 26px;
+    padding-left: 96px;
+    padding-right: 109px;
+
+    max-width: 688px;
+    height: 303px;
+  }
+  .problems-item {
+    display: block;
+    width: calc((100% - 2 * 22px) / 2);
+  }
+  .problems-item:nth-child(2n-1) {
+    margin-right: 24px;
+  }
+  .problems-description {
+    margin: 0;
+  }
 }
