Исправляет путь к паршалам

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,4 +3,111 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
+body {
+  font-family: var(--main-font);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+:root {
+  --main-color: #111518;
+  --accent-color: #ff6b09;
+  --secondary-color: #b9b9b9;
+  --timing-fn: cubic-bezier(0.4, 0, 0.2, 1);
+  --main-font: 'Montserrat', sans-serif;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.container {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.program {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #000000;
+}
+
+.program-title {
+  margin-bottom: 43px;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.program-list > li {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.program-list > li:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.program-term-list > li {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.67;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 0.08em;
+  color: var(--accent-color);
+  text-transform: none;
+}
+
+.program-content-item {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.08em;
+  color: var(--secondary-color);
+  opacity: 0.5;
+}
 /*# sourceMappingURL=main.css.map */
