--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,14 +9,14 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 
-@import './header';
-@import './hero';
-@import './problems';
-@import './we_do_it';
-@import './program';
-@import './advantages';
-@import './teacher';
-@import './waranty';
-@import './comment';
-@import './form';
-@import './footer';
+@import './components/header';
+@import './components/hero';
+@import './components/problems';
+@import './components/we_do_it';
+@import './components/program';
+@import './components/advantages';
+@import './components/teacher';
+@import './components/waranty';
+@import './components/comment';
+@import './components/form';
+@import './components/footer';
