--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -35,6 +35,31 @@ img {
   text-decoration: none;
 }
 
+.container {
+  width: 100%;
+  padding: 0 20px;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 40px;
+  }
+}
+
+@media screen and (min-width: 1316px) {
+  .container {
+    max-width: 1316px;
+  }
+}
+
 :root {
   --main-color: #111518;
   --accent-color: #ff6b09;
