Ads menu js and some styles to mobile header.

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -1,23 +1,19 @@
 <!-- Header -->
-<header class="page-header">
-    <a href="./index.html" class="logo link" aria-label="Логотип сайта" lang="en">
-        <div class="logo-main-container">
-            <span class="logo-text">Hell</span>
-            <svg class="logo-icon" width="14px" height="19px">
-                <use href="./images/sprite.svg#Fire"></use>
+<div class="page-header container">
+    <div class="nav-container">
+        <a href="./index.html" class="logo link" aria-label="Логотип сайта" lang="en">
+            <svg class="logo-icon">
+                <use class="logo-main" href="./images/sprite.svg#logo-main"></use>
+                <!-- <use class="logo-dark" href="./images/sprite.svg#logo-dark"></use> -->
             </svg>
-            <span class="logo-text">EN</span>
-        </div>
-        <div class="logo-secondary-container">
-            <span class="logo-description">Адский Английский</span>
-        </div>
-    </a>
-    <button type="button" class="menu-btn" aria-expanded="false" aria-controls="menu" data-menu-button>
-        <svg class="menu-btn-icon" width="20px" height="12px" aria-label="Перекючатель мобильного меню">
-            <use class="menu-icon" href="./images/sprite.svg#menu"></use>
-            <use class="menu-close-icon" href="./images/sprite.svg#menu-close"></use>
-        </svg>
-    </button>
+        </a>
+        <button type="button" class="menu-btn" aria-expanded="false" aria-controls="menu" data-menu-button>
+            <svg class="menu-btn-icon" width="20px" height="12px" aria-label="Перекючатель мобильного меню">
+                <use class="menu-icon" href="./images/sprite.svg#menu"></use>
+                <use class="menu-close-icon" href="./images/sprite.svg#menu-close"></use>
+            </svg>
+        </button>
+    </div>
     <div class="menu" id="menu" data-menu>
         <nav class="nav">
             <ul class="nav-list">
@@ -37,4 +33,4 @@
         </nav>
         <button type="button" class="nav-btn">Консультация по телефону</button>
     </div>
-</header>
+</div>
