--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,9 +10,6 @@
 
 @import './layout/section';
 @import './layout/container';
+@import './layout/page-header';
 
 @import './components/body';
-
-
-
-
