--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -1,32 +1,82 @@
-<article class="example">
-  <h1>HTML-фрагменты</h1>
 
-  <p>
-    Плагин
-    <a
-      href="https://github.com/posthtml/posthtml-include"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      posthtml-include
-    </a>
-    позволяет добавлять в HTML-файлы страниц код из других HTML-файлов
-    (фрагментов). Фрагменты хранятся в папке
-    <code>src/partials</code>. Добавление происходит при компиляции файлов
-    страниц, например <code>index.html</code>.
-  </p>
+<!-- У нас секции или артикл ?
+  Класс/Паршал Сеция, контейнер?
+  Сброс стилей на списки
+  Миксин для стилей текста
+          @mixin font($fw, $fs, $lh, $ta, $ls) {
+          font-weight: $fw;
+          font-size: $fs;
+          line-height: $lh;
+          text-align: $ta;
+          letter-spacing: $ls;
+} ;
+-->
 
-  <p>
-    Этот файл <code>example.html</code> &mdash; пример такого фрагмента, с
-    разметкой определённой части главной страницы. Это очень удобно при
-    командной разработке на студенческих проектах, когда в одном HTML-файле
-    пишет несколько человек сразу.
-  </p>
+<article class="advantage section">
+  <div class="contener">
+    <h2 class="advantage__title">Как мы это делаем</h2>
+    <ul class="advantage-list">
+      <li class="advantage-list__item">
+        <!-- svg -->
+        <h3 class="advantage-list__title">
+          Адаптированная программа подготовки к ВНО
+        </h3>
+        <p advantage-list__text>
+          Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.
+        </p>
+      </li>
 
-  <p>
-    Синтаксис добавление фрагмента в главный файл:
-    <code>
-      &lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt;
-    </code>
-  </p>
+      <li class="advantage-list__item">
+        <!-- svg -->
+        <h3 class="advantage-list__title">
+          Аудитория и онлайн-обучение
+        </h3>
+        <p advantage-list__text>
+          Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате при желании.
+        </p>
+      </li>
+
+      <li class="advantage-list__item">
+        <!-- svg -->
+        <h3 class="advantage-list__title">
+          Привычка читать на английском языке
+        </h3>
+        <p advantage-list__text>
+          Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.
+        </p>
+      </li>
+
+      <li class="advantage-list__item">
+        <!-- svg -->
+        <h3 class="advantage-list__title">
+          Психологическая поддержка
+        </h3>
+        <p advantage-list__text>
+          Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности в себе.
+        </p>
+      </li>
+     
+      <li class="advantage-list__item">
+        <!-- svg -->
+        <h3 class="advantage-list__title">
+          Обучение по авторским пособиям
+        </h3>
+        <p advantage-list__text>
+          Тебе не нужно тратить время на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили 2 пособия для тебя.
+        </p>
+      </li>
+
+      <li class="advantage-list__item">
+        <!-- svg -->
+        <h3 class="advantage-list__title">
+          Умение воспринимать устную английскую речь
+        </h3>
+        <p advantage-list__text>
+          “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с изучаемой лексикой.
+        </p>
+      </li>
+    </ul>
+
+  </div>
+
 </article>
