--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,6 +6,7 @@
                     <span lang="en" class="header-nav-logo-second">EN</span>
                     <span class="header-nav-logo-third">Адский</span>
                     <span class="header-nav-logo-fourth">английский</span>
+                    <span class="header-nav-logo-fourth">английский</span>
                 </a>
                 <!--<button type="button" class="close-menu-btn is-open" data-menu-button>
                     <svg class="close-menu-icon" aria-label="Переключатель мобильного меню">
