Работа со спрайтом

--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -10,15 +10,25 @@
           text-align: $ta;
           letter-spacing: $ls;
 } ;
+
+Являются ли мои карточки ссылками
+advantageS
+ошибка Colorize
+не подключает scss
+
+Сделала разметку в html
+создала спрайт
 -->
 
-<article class="advantage section">
+<article class="advantages section">
   <div class="contener">
-    <h2 class="advantage__title">Как мы это делаем</h2>
-    <ul class="advantage-list">
-      <li class="advantage-list__item">
-        <!-- svg -->
-        <h3 class="advantage-list__title">
+    <h2 class="advantages__title">Как мы это делаем</h2>
+    <ul class="advantages-list">
+      <li class="advantages-list__item">
+        <svg class="advantages-list__icon">
+          <use href="../icons/advantages-sprite.svg#advantage01"></use>
+        </svg>
+        <h3 class="advantages-list__title">
           Адаптированная программа подготовки к ВНО
         </h3>
         <p advantage-list__text>
@@ -26,9 +36,9 @@
         </p>
       </li>
 
-      <li class="advantage-list__item">
+      <li class="advantages-list__item">
         <!-- svg -->
-        <h3 class="advantage-list__title">
+        <h3 class="advantages-list__title">
           Аудитория и онлайн-обучение
         </h3>
         <p advantage-list__text>
@@ -36,9 +46,9 @@
         </p>
       </li>
 
-      <li class="advantage-list__item">
+      <li class="advantages-list__item">
         <!-- svg -->
-        <h3 class="advantage-list__title">
+        <h3 class="advantages-list__title">
           Привычка читать на английском языке
         </h3>
         <p advantage-list__text>
@@ -46,9 +56,9 @@
         </p>
       </li>
 
-      <li class="advantage-list__item">
+      <li class="advantages-list__item">
         <!-- svg -->
-        <h3 class="advantage-list__title">
+        <h3 class="advantages-list__title">
           Психологическая поддержка
         </h3>
         <p advantage-list__text>
@@ -56,9 +66,9 @@
         </p>
       </li>
      
-      <li class="advantage-list__item">
+      <li class="advantages-list__item">
         <!-- svg -->
-        <h3 class="advantage-list__title">
+        <h3 class="advantages-list__title">
           Обучение по авторским пособиям
         </h3>
         <p advantage-list__text>
@@ -66,9 +76,9 @@
         </p>
       </li>
 
-      <li class="advantage-list__item">
+      <li class="advantages-list__item">
         <!-- svg -->
-        <h3 class="advantage-list__title">
+        <h3 class="advantages-list__title">
           Умение воспринимать устную английскую речь
         </h3>
         <p advantage-list__text>
