Добавляет стили для героя и модалки

--- a/src/partials/page-hero.html
+++ b/src/partials/page-hero.html
@@ -1,7 +1,10 @@
-<header class="page-header ">
+<section class="page-hero">
     <div class="container">
         <h1 class="hero-title">Комплексная подготовка к ВНО по английскому языку</h1>
-        <p class="hero-text">Просто не будет. Но ты гарантировано наберешь +25 баллов</p>
-        <button class="modal-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
+        <p class="hero-text"><span class="hero-text-grey">Просто не будет.</span> Но ты гарантировано наберешь <span class="hero-text-accent">+25 баллов</span></p>
+        <div class="hero-btn-wrapper">
+            <button class="hero-btn" type="button" data-modal-open>хочу на бесплатное занятие</button>
+        </div>
+        <div class="hero-bg"></div>
     </div>
-</header>
+</section>
