--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,3 +23,5 @@
 @import './layout/teacher';
 @import './layout/we-promise.scss';
 @import './layout/feedbacks';
+
+@import './components/backdrop';
