--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -6,21 +6,33 @@
 
   @media screen and (min-width: 768px) {
     padding-top: 60px;
+    height: 340px;
   }
 
   @media screen and (min-width: 1400px) {
     padding-top: 100px;
     padding-bottom: 130px;
+    height: 560px;
   }
 }
 
 .problems .title {
-  padding-right: 30px;
+  width: 230px;
 
   margin-bottom: 27px;
   @include font(800, 20px, 1.36);
   color: #ffffff;
-  letter-spacing: 0.08em;
+  letter-spacing: 0.03em;
+
+  @media screen and (min-width: 768px) {
+    width: 450px;
+    @include font(800, 26px, 1.3);
+  }
+
+  @media screen and (min-width: 1400px) {
+    width: 866px;
+    @include font(800, 46px, 1.3);
+  }
 }
 
 .title .accent-color {
@@ -28,16 +40,50 @@
 }
 
 .problems-list__wrapper {
+  //   position: absolute;
+  //   top: 205px;
+  //   width: 280px;
+
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 30px;
-  padding-right: 31px;
+  padding-right: 20px;
   background-color: #ffffff;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+
+  @media screen and (min-width: 768px) {
+    padding-top: 30px;
+    padding-bottom: 26px;
+    padding-left: 96px;
+    // padding-right: 96px;
+  }
 }
 
-.problems-list__item:not(:last-child) {
-  margin-bottom: 10px;
+.problems-list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.problems-list__item {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 236px;
+
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 24px;
+    }
+
+    &:nth-child(2n + 1) {
+      margin-right: 22px;
+    }
+  }
 }
 
 .problems-list__number {
@@ -61,6 +107,10 @@
 }
 
 .problems-list__description {
-  @include font(700, 14px, 1.71);
+  @include font(700, 14px, 1.43);
   letter-spacing: 0.08em;
+
+  @media screen and (min-width: 1400px) {
+    @include font(700, 20px, 1.2);
+  }
 }
