--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -54,7 +54,7 @@ position: relative;
     
     top: 0px;
     left:-8px;
-   
+    // background-image: url("./../images/icon/sprite.svg#fire");
  
     // background-repeat: no-repeat;
     // background-position: 50%;
