Добавляет стили для планшета

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,35 +1,34 @@
 <section class="program">
-    <div class="program-container">
+    <div class="container">
         <h2 class="program-title">Наша программа</h2>
-        <div class="program-border-wrapper">
         <div class="program-list-wrapper">
-            <ul class="program-list list">
+            <ul class="program-list">
                 <li class="program-item">
                     <h3 class="program-subtitle">1 семестр</h3>
-                    <ul class="program-subtitle-list list">— Grammar
+                    <ul class="program-subtitle-list">— Grammar
                         <li class="program-subtitle-item">Nouns & Articles</li>
                         <li class="program-subtitle-item">Adjectives & Adverb</li>
                     </ul>
                 </li>
                 <li class="program-item">
-                    <ul class="program-subtitle-list list">— Vocabulary
+                    <ul class="program-subtitle-list">— Vocabulary
                         <li class="program-subtitle-item">Family & Relations</li>
                         <li class="program-subtitle-item">People & Society</li>
                     </ul>
                 </li>
             </ul>
 
-            <ul class="program-list list">
+            <ul class="program-list">
                 <li class="program-item">
                     <h3 class="program-subtitle">2 семестр</h3>
-                    <ul class="program-subtitle-list list">— Grammar
+                    <ul class="program-subtitle-list">— Grammar
                         <li class="program-subtitle-item">Pronouns</li>
                         <li class="program-subtitle-item">Active Voice</li>
                         <li class="program-subtitle-item">Passive Voice</li>
                     </ul>
                 </li>
                 <li class="program-item">
-                    <ul class="program-subtitle-list list">— Vocabulary
+                    <ul class="program-subtitle-list">— Vocabulary
                         <li class="program-subtitle-item">Home</li>
                         <li class="program-subtitle-item">School</li>
                         <li class="program-subtitle-item">Work</li>
@@ -37,10 +36,10 @@
                 </li>
             </ul>
 
-            <ul class="program-list list">
+            <ul class="program-list">
                 <li class="program-item">
                     <h3 class="program-subtitle">3 семестр</h3>
-                    <ul class="program-subtitle-list list">— Grammar
+                    <ul class="program-subtitle-list">— Grammar
                         <li class="program-subtitle-item">Modal verbs</li>
                         <li class="program-subtitle-item">Infinitive</li>
                         <li class="program-subtitle-item">Gerund</li>
@@ -48,23 +47,23 @@
                     </ul>
                 </li>
                 <li class="program-item">
-                    <ul class="program-subtitle-list list">— Vocabulary
+                    <ul class="program-subtitle-list program-subtitle-tablet">— Vocabulary
                         <li class="program-subtitle-item">Travel & Tourism</li>
                         <li class="program-subtitle-item">Culture & Free Time</li>
                         <li class="program-subtitle-item">Sport</li>
                     </ul>
                 </li>
                 <li class="program-item">
-                    <ul class="program-subtitle-list list">— Writing
+                    <ul class="program-subtitle-list">— Writing
                         <li class="program-subtitle-item">Informal Letter</li>
                     </ul>
                 </li>
             </ul>
 
-            <ul class="program-list list">
+            <ul class="program-list">
                 <li class="program-item">
                     <h3 class="program-subtitle">4 семестр</h3>
-                    <ul class="program-subtitle-list list">— Grammar
+                    <ul class="program-subtitle-list">— Grammar
                         <li class="program-subtitle-item">Clauses: Conditional and Wishes</li>
                         <li class="program-subtitle-item">Direct / Reported speech</li>
                         <li class="program-subtitle-item">Preposition</li>
@@ -73,29 +72,28 @@
                     </ul>
                 </li>
                 <li class="program-item">
-                    <ul class="program-subtitle-list list">— Vocabulary
+                    <ul class="program-subtitle-list program-subtitle-tablet">— Vocabulary
                         <li class="program-subtitle-item">Healthy Living</li>
                         <li class="program-subtitle-item">Nature & Environment</li>
                         <li class="program-subtitle-item">Money</li>
                     </ul>
                 </li>
                 <li class="program-item">
-                    <ul class="program-subtitle-list list">— Writing
+                    <ul class="program-subtitle-list">— Writing
                         <li class="program-subtitle-item">Formal Letter</li>
                     </ul>
                 </li>
             </ul>
 
-            <ul class="program-list list">
+            <ul class="program-list">
                 <li class="program-item">
                     <h3 class="program-subtitle">5 семестр</h3>
-                    <ul class="program-subtitle-list list">—
+                    <ul class="program-subtitle-list">—
                         <li class="program-subtitle-item">Revision</li>
                         <li class="program-subtitle-item">Tests</li>
                     </ul>
                 </li>
             </ul>
-        </div>
         </div>
 
         <div class="program-wrapper">
