--- a/src/sass/layouts/_program.scss
+++ b/src/sass/layouts/_program.scss
@@ -5,15 +5,69 @@
   background-color: $dark-bg;
   background-image: url(../images/program/main-pic-1.png);
   background-repeat: no-repeat;
-  background-position: 138% 75%;
+  background-position: 193px 1509px;
   background-size: 186px 137px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    background-position: 450px 861px;
+    background-size: 384px 240px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 120px;
+  }
 }
 
-.program-list-wrapper {
-  width: 180px;
-  margin: 0 auto;
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
+@media screen and (max-width: 1199px) {
+  .program-list-wrapper {
+    width: 180px;
+    margin: 0 auto;
+    padding-left: 29px;
+
+    &::before {
+      content: '';
+      background-color: rgba(255, 255, 255, 0.5);
+      width: 1px;
+      height: 1293px;
+      position: absolute;
+      top: 133px;
+    }
+  }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .program-list-wrapper::before {
+    content: '';
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 1px;
+    height: 749px;
+    position: absolute;
+    top: 157px;
+    left: 131px;
+  }
+
+  .program-item + .program-item {
+    padding-top: 33px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .program-list-wrapper {
+    width: initial;
+    padding-left: 98px;
+  }
+}
+
+// .program-subtitle::before {
+//   content: '';
+//   background-image: url('../images/program/ellipse-6.svg');
+//   width: 12px;
+//   height: 12px;
+//   position: absolute;
+//   top: 127px;
+//   left: 95px;
+// }
 
 .program-title {
   margin-bottom: 43px;
@@ -22,6 +76,14 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: $white-font;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    margin-bottom: 52px;
+    text-align: start;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 46px;
+  }
 }
 
 .program-list {
@@ -30,6 +92,10 @@
 
   &:last-child {
     margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
   }
 }
 
@@ -50,6 +116,22 @@
   letter-spacing: 0.08em;
   text-transform: initial;
   color: $orange;
+
+  @media screen and (min-width: 768px) {
+    width: 176px;
+    // margin-right: 50px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .program-subtitle-list:nth-child(even) {
+    margin-right: 50px;
+  }
+
+  .program-subtitle-tablet {
+    margin-right: 50px;
+  }
 }
 
 .program-subtitle-item {
@@ -66,6 +148,10 @@
   position: absolute;
   bottom: -152px;
   left: 18px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    bottom: -192px;
+  }
 }
 
 .program-wrapper-title {
@@ -76,9 +162,6 @@
   letter-spacing: 0.03em;
 
   color: $white-font;
-}
-
-.program-border-wrapper {
 }
 
 .features-overlay {
