--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -13,6 +13,9 @@
     padding-top: 100px;
     padding-bottom: 130px;
     height: 560px;
+    background-image: url('../images/problems/fire-problems.svg');
+    background-repeat: no-repeat;
+    background-position: right bottom;
   }
 }
 
@@ -31,6 +34,7 @@
 
   @media screen and (min-width: 1400px) {
     width: 866px;
+    margin-bottom: 70px;
     @include font(800, 46px, 1.3);
   }
 }
@@ -44,18 +48,16 @@
   //   top: 205px;
   //   width: 280px;
 
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 20px;
+  padding: 20px 30px;
   background-color: #ffffff;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 
   @media screen and (min-width: 768px) {
-    padding-top: 30px;
-    padding-bottom: 26px;
-    padding-left: 96px;
-    // padding-right: 96px;
+    padding: 30px 96px;
+  }
+
+  @media screen and (min-width: 1400px) {
+    padding: 70px 114px;
   }
 }
 
@@ -63,6 +65,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
@@ -73,15 +76,19 @@
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1399px) {
     width: 236px;
 
     &:not(:nth-last-child(-n + 2)) {
       margin-bottom: 24px;
     }
+  }
 
-    &:nth-child(2n + 1) {
-      margin-right: 22px;
+  @media screen and (min-width: 1400px) {
+    width: 336px;
+
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 32px;
     }
   }
 }
@@ -104,6 +111,10 @@
   @include font(700, 20px, 1.2);
   letter-spacing: 0.08em;
   color: var(--accent-color);
+
+  @media screen and (min-width: 1400px) {
+    margin-bottom: 10px;
+  }
 }
 
 .problems-list__description {
