закінчила мобільну версію

--- a/src/partials/program-section.html
+++ b/src/partials/program-section.html
@@ -114,9 +114,19 @@
             </li>
         </ul>
     
-
-    <img>
-
+        <picture class="section-program-picture">
+             <source 
+            srcset="./images/program-section/pic-tel@1x.jpg 1x, ./images/program-section/pic-tel@2x.jpg 2x"
+            media="(max-width: 767px)" />
+            <source 
+            srcset="./images/program-section/pic-desk@1x.jpg 1x, ./images/program-section/pic-desk@2x.jpg 2x"
+            media="(min-width: 1200px)" />
+            <source 
+            srcset="./images/program-section/pic-tab@1x.jpg 1x, ./images/program-section/pic-tab@2x.jpg 2x"
+            media="(min-width: 768px)" />  
+          <img class="section-program-img" src="./images/program-section/pic-tel@1x.jpg" alt="учетильница занимаеться с сотрудниками" >
+         </picture> 
+   
     </div>
     
 </section>
