--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -55,8 +55,8 @@
     letter-spacing: 0.08em;
     color: var(--accent-color); 
 
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 
@@ -71,7 +71,7 @@
     opacity: 0.5;
 
     &:not(:last-child){
-        margin-bottom: 5px;
+        margin-bottom: 4px;
     }
 
 }
@@ -95,7 +95,7 @@
 .program-list::before{
     content: " ";
     // display: inline-block;
-    height: 1507px;
+    height: 1292px;
     width: 1px;
     background:  #FFFFFF ;
     position: absolute;
@@ -103,6 +103,15 @@
 
     top: 130px;
     left: 88px;
+}
+
+.section-program-picture{
+    position: absolute;
+    z-index: 10;
+    right: 0;
+    top: 1473px;
+    opacity: 0.5;
+    
 }
 
 @media screen and (max-width: 767px){
@@ -117,17 +126,20 @@
     .choose-section{
         margin-top: 50px;
        position: absolute;
-       top: 1760px;
+       top: 1522px;
     
     }
 
     .choose-wrapper{
         margin-right: auto;
         margin-left: auto;
+        // margin-right: 20px;
+        // margin-left: 20px;
         width: 280px;
         padding: 20px 30px;
         background: #FFFFFF;
         box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+        
 
     }
 
