--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -8,3 +8,13 @@
     letter-spacing: 0.04em;
     color: #FFFFFF;
 }
+.header-nav-sheet{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 180%;
+    /* or 36px */
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
