--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -91,6 +91,17 @@ img {
   color: #FFFFFF;
 }
 
+.header-nav-sheet {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 180%;
+  /* or 36px */
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+}
+
 .container {
   width: 100%;
   padding-left: 20px;
