добавив стилі в паршал main

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,32 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './base/base';
+@import './base/containers';
+
+@import './components/backdrop';
+@import './components/button';
+@import './components/menu_button';
+@import './components/modal__form';
+@import './components/modal';
+@import './components/page_registration';
+@import './components/page-footer__address';
+@import './components/portfolio__filter';
+@import './components/section';
+@import './components/site-nav';
+
+@import './layout/advantage';
+@import './layout/clients';
+@import './layout/features';
+@import './layout/general-problem';
+@import './layout/hero';
+@import './layout/our_guarantees';
+@import './layout/our_programm';
+@import './layout/page-footer';
+@import './layout/page-header';
+@import './layout/registration-form';
+@import './layout/teacher';
+
+@import './utils/mixins';
+@import './utils/variables';
+@import './utils/visually-hidden';
