--- a/src/sass/layout/_advantage.scss
+++ b/src/sass/layout/_advantage.scss
@@ -1,9 +1,69 @@
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.advantages__title {
+  padding-bottom: 30px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
 .advantages-list {
   list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.advantages-list__item {
+  margin: 0 auto;
+  width: 280px;
+  height: 280px;
+  padding-top: 30px;
+  padding-bottom: 22px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 15px;
+  background: var(--white-text-color);
+  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
 }
 
 .advantages-list__icon {
+  display: block;
+  margin: 0 auto 20px;
   width: 40px;
   height: 40px;
   fill: orange;
+}
+
+.advantages-list__title {
+  // !!!!!!!
+  margin-bottom: 0;
+  margin-top: 0;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.429;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--title-text-color);
+}
+
+.advantage-list__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--primary-text-color);
 }
