зміна в контейнері/бас

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,15 +1,15 @@
-body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  background-color: var(--primary-background-color);
+// body {
+//   font-family: 'Roboto', sans-serif;
+//   font-weight: 400;
+//   letter-spacing: 0.03em;
+//   background-color: var(--primary-background-color);
 
-  animation-duration: 1000ms;
+//   animation-duration: 1000ms;
 
-  &.modal-open {
-    overflow: hidden;
-  }
-}
+//   &.modal-open {
+//     overflow: hidden;
+//   }
+// }
 a {
   text-decoration: none;
 }
