--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -2,6 +2,7 @@
 <!-- 
    У нас секции или артикл ?
   Класс/Паршал Сеция, контейнер?
+  Брейкпоинт другие 320, 768, 1680
   Сброс стилей на списки
   добавить фон в переменную
   Подключить шрифты
